# docs/swagger.json
@@ -3,7 +3,10 @@
     "info": {
         "description": "API Server for MediumuZ Application",
         "title": "MediumuZ API",
-        "contact": {},
+        "termsOfService": "https://github.com/BakhodiribnYashinibnMansur/Medium_uz",
+        "contact": {
+            "url": "phapp0224mb@gmail.com"
+        },
         "version": "1.0"
     },
     "host": "localhost:8080",
@@ -77,6 +80,71 @@
                 }
             }
         },
+        "/auth/sign-in": {
+            "post": {
+                "description": "login account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "SignIn",
+                "operationId": "login-account",
+                "parameters": [
+                    {
+                        "description": "account info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.SignInInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseSign"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/sign-up": {
             "post": {
                 "description": "create account",
@@ -106,7 +174,74 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseSignUp"
+                            "$ref": "#/definitions/model.ResponseSign"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/error.errorResponse"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Upload Account Image",
+                "consumes": [
+                    "application/json",
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json",
+                    "text/plain",
+                    "application/octet-stream",
+                    "image/png",
+                    "image/jpeg",
+                    "image/jpg"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Upload Account Image",
+                "operationId": "upload-image",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseSuccess"
                         }
                     },
                     "400": {
@@ -220,7 +355,7 @@
                 }
             }
         },
-        "model.ResponseSignUp": {
+        "model.ResponseSign": {
             "type": "object",
             "properties": {
                 "id": {
@@ -237,6 +372,19 @@
                 "data": {},
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "model.SignInInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "default": "0224mb"
+                },
+                "username": {
+                    "type": "string",
+                    "default": "MRB"
                 }
             }
         },
