# package/handler/handler.go
@@ -26,6 +26,7 @@ func (handler *Handler) InitRoutes() *gin.Engine {
 	auth := router.Group("/auth")
 	{
 		auth.POST("/sign-up", handler.signUp)
+		auth.PATCH("/sign-up", handler.signUp)
 		auth.POST("/sign-in", handler.signIn)
 		auth.GET("/verify", handler.verifyEmail)
 		auth.GET("/resend", handler.resendCodeToEmail)
